<resources>
    <string name="appname">University Labster</string>
    <string name="app_name">University Labster</string>


    <!-- empty layout -->
    <string name="retry">Retry</string>
    <string name="no_events_found">No events found :(</string>

    <!-- login -->
    <string name="terms_and_condition">Terms and conditions</string>

    <!-- home -->
    <string name="my_courses">My courses</string>
    <string name="profile">Profile</string>
    <string name="shop">Shop</string>
    <string name="find_courses">Find courses</string>

    <!-- authentication -->
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="save_changes">Save changes</string>
    <string name="token_expired">Session expired. Please login again.</string>
    <string name="register_successful">Your account was created</string>

    <!-- profile -->
    <string name="open_gallery">Open gallery</string>
    <string name="take_photo">Take photo</string>
    <string name="file_path">file:///</string>
    <string name="check_sdcard_status">please check your sdcard status</string>
    <string name="products_error">Can\'t get products</string>
    <string name="no_internet_connection">No internet connection</string>

    <!-- find courses -->
    <string name="reserve_course">Reserve</string>
    <string name="could_not_find_courses">No courses found</string>
    <string name="network_error">No internet connection</string>
    <string name="remove_course">Remove</string>
    <string name="unregister_successful">Course removed successfully</string>
    <string name="course_places_left">%1$d places left</string>
    <string name="course_no_places_left">No places left</string>
    <string name="registration_successful">Registration successful</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="no_courses_for_day">There are no courses for this day</string>

    <!-- my courses -->
    <string name="course_held_by">Course held by : %1$s</string>
    <string name="people_per_session">%1$d people / session</string>
    <string name="no_course_registrations">You are currently not registered to any course</string>

    <string name="invalid_login">Please use valid emails and non null passwords.</string>
    <string name="invalid_register">Please use valid emails and non null passwords and name.</string>
    <string name="fblogin">Login with Facebook</string>

    <string name="facebook_app_id">1510683872518738</string>
    <string name="fb_login_protocol_scheme">fb1510683872518738</string>
    <string name="fb_login_error">Can\'t login with facebook</string>
    <string name="year">Year</string>
    <string name="section">Section</string>
    <string name="group_name">Group</string>
    <string name="cantupdate">Can\'t update profile</string>
    <string name="section_dashboard">Section dashboard</string>
    <string name="chat_message">Your chat message here..</string>
    <string name="event_details">Event details</string>
    <string name="attendees">Attendees:</string>
    <string name="suggest_changes">Suggest changes</string>
    <string name="change_revieing">Your change will be reviewed! Thank\'s for the feedback!</string>
    <string name="confirm_changes">Confirm changes</string>
    <string name="confirmation_changes">Confirm changes</string>
    <string name="no_confirmations">Nothing to confirm yet :( Please come later.</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="suggest_new_event">New event</string>
    <string name="change_time">Change time</string>
    <string name="teacher">Teacher</string>
    <string name="address">Address</string>
    <string name="please_set_time">Please set the time!</string>
    <string name="please_fill_fields">Please fill in all fields!</string>
    <string name="name">Event name</string>
    <string name="select_a_lesson">Please choose a lesson</string>
    <string name="wait_event_approval">Event request sent. Please wait for someone to approve it.</string>
    Copy Code


</resources>
