<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center"
              android:gravity="center"
              android:orientation="vertical"
              tools:ignore="MissingPrefix">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Spinner
        android:id="@+id/suggestion_lessons"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/suggestion_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Time: N/A"/>

    <TextView
        android:id="@+id/suggestion_change_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="?attr/selectableItemBackground"
        android:padding="6dp"
        android:text="@string/change_time"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/suggestion_name"
            fontPath="fonts/Lato-Light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="@dimen/authentication_input_size"
            app:backgroundTint="@color/colorPrimary"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/suggestion_teacher"
            fontPath="fonts/Lato-Light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:hint="@string/teacher"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="@dimen/authentication_input_size"
            app:backgroundTint="@color/colorPrimary"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/suggestion_address"
            fontPath="fonts/Lato-Light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:hint="@string/address"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="@dimen/authentication_input_size"
            app:backgroundTint="@color/colorPrimary"
            />
    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/suggestion_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="4dp"
        android:background="?attr/selectableItemBackground"
        android:padding="6dp"
        android:text="@string/save_changes"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"/>
</LinearLayout>