<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorPrimary"
             android:gravity="center"
             android:orientation="vertical"
             android:paddingEnd="@dimen/second_key_line"
             android:paddingStart="@dimen/second_key_line"
             tools:ignore="MissingPrefix">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center">

        <EditText
            android:id="@+id/login_email_input"
            fontPath="fonts/Lato-Light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_height"
            android:drawablePadding="@dimen/small_margin"
            android:drawableStart="@drawable/ic_mail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:text="regular@test.com"
            android:textColor="@color/white"
            android:textColorHint="@color/light_gray"
            android:textSize="@dimen/authentication_input_size"
            app:backgroundTint="@color/white"/>


        <EditText
            android:id="@+id/login_password_input"
            fontPath="fonts/Lato-Light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_email_input"
            android:drawablePadding="@dimen/small_margin"
            android:drawableStart="@drawable/ic_key"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:text="password"
            android:textColor="@color/white"
            android:textColorHint="@color/light_gray"
            android:textSize="@dimen/authentication_input_size"
            app:backgroundTint="@color/white"/>

        <View
            android:id="@+id/login_centered_view"
            android:layout_width="@dimen/no_dimension"
            android:layout_height="@dimen/no_dimension"
            android:layout_below="@id/login_password_input"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/login_button"
            fontPath="fonts/Lato-Light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password_input"
            android:layout_marginTop="@dimen/primary_margin"
            android:layout_toStartOf="@id/login_centered_view"
            android:background="?attr/selectableItemBackground"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/authentication_button_text_size"/>

        <Button
            android:id="@+id/register_new_button"
            fontPath="fonts/Lato-Light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password_input"
            android:layout_marginTop="@dimen/primary_margin"
            android:layout_toEndOf="@id/login_centered_view"
            android:background="?attr/selectableItemBackground"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/authentication_button_text_size"/>


    </RelativeLayout>

    <Button
        android:id="@+id/register_login_facebook"
        fontPath="fonts/Lato-Light.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="40dp"
        android:background="?attr/selectableItemBackground"
        android:drawableLeft="@drawable/fb"
        android:drawablePadding="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/fblogin"
        android:textColor="@color/white"
        android:textSize="@dimen/authentication_button_text_size"/>
</FrameLayout>