<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="60dp"
    android:paddingRight="60dp"
    tools:ignore="MissingPrefix">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/profile_picture_size"
        android:layout_height="@dimen/profile_picture_size"
        android:src="@drawable/user"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/profile_name_input"
            fontPath="fonts/Lato-Light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:hint="@string/full_name"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="@dimen/authentication_input_size"
            app:backgroundTint="@color/colorPrimary"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/profile_year"
            fontPath="fonts/Lato-Light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:hint="@string/year"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="@dimen/authentication_input_size"
            app:backgroundTint="@color/colorPrimary"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/profile_section"
            fontPath="fonts/Lato-Light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:hint="@string/section"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="@dimen/authentication_input_size"
            app:backgroundTint="@color/colorPrimary"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/profile_group_name"
            fontPath="fonts/Lato-Light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:hint="@string/group_name"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="@dimen/authentication_input_size"
            app:backgroundTint="@color/colorPrimary"
            />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/profile_spinner"
        fontPath="fonts/Lato-Light.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/faculties"
        android:textColor="@color/black"
        android:textColorHint="@color/light_gray"
        android:textSize="@dimen/authentication_input_size"
        app:backgroundTint="@color/colorPrimary"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/profile_save_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="?attr/selectableItemBackground"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/save_changes"
        android:textSize="@dimen/save_changes_button_text_size"
        tools:ignore="MissingPrefix"/>


</LinearLayout>